# circleci-poetry

./: blog.md  pyproject.toml
.circleci/: config.yml
src/: a.py
tests/: test_a.py
